<resources>
    <string name="app_name">ChatApp</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="inicia_sesion_para_continuar">Inicia sesion para continuar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_nueva_cuenta">Crear nueva cuenta</string>
    <string name="anadir_imagen">Anadir imagen</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registrarse">Registrarse</string>
    <string name="seleccionar_usuario">Seleccionar Usuario</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje...</string>
    <string name="online">Online</string>
    <string name="imagen">imagen</string>
    <string name="chatapp">ChatApp</string>
    <string name="inicia_sesi_n_o_registrate_para_poder_continuar">Inicia sesión o registrate para poder continuar!</string>
</resources>